<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_topic">FuelQ</string>
    <string name="login_topic">LOG IN TO YOUR ACCOUNT</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="fp_link">Forgot Password</string>
    <string name="login_btn">Login</string>
    <string name="signIn_link"><u>Create Account</u></string>
    <string name="req_text">*</string>
    <string name="customer_reg_btn">Customer Registration</string>
    <string name="shedOwner_reg_btn">Shed Owner Registration</string>
    <string name="register_topic">CREATE YOUR ACCOUNT</string>
    <string name="reEnterPassword">Re-enter Password</string>
    <string name="vehNumber">Vehicle Number</string>
    <string name="vehType">Vehicle Type</string>
    <string name="fuelType">Fuel Type</string>
    <string name="reg_btn">Create Account</string>
    <string name="ownerFuel_btn">View Owner and Fuel Details</string>
    <string name="queue_btn">View Queue Details</string>
    <string name="shed_id">Fuel Station 001</string>
    <string name="shed_name">Piliyandala Fuel Station</string>
    <string name="shed_owner_name">Saman Perera</string>
    <string name="shed_contact">0114567772</string>
    <string name="octane">OCTANE 95</string>
    <string name="arriving_litres">Litres Arriving</string>
    <string name="remaining_litres">Litres Remaining</string>
    <string name="litres1">6600 L</string>
    <string name="litres2">4500 L</string>
    <string name="date">Arriving Date</string>
    <string name="time">Arriving Time</string>
    <string name="updateDetails">Update Details</string>
    <string name="addDetails">Add Details</string>
    <string name="van">VAN</string>
    <string name="bike">BIKE</string>
    <string name="car">CAR</string>
    <string name="bus">BUS</string>
    <string name="three_wheel">THREE WHEEL</string>
    <string name="lorry">LORRY</string>
    <string name="tot">Total:</string>
    <string name="ten">10</string>
    <string name="contact">Contact Number</string>
    <string name="station_name">Fuel Station Name</string>
    <string name="station_id">Fuel Station ID</string>
    <string name="location">Location</string>
    <string name="ownerName">Owner Name</string>
    <string name="feedback1">How was your</string>
    <string name="feedback2">Experience..</string>
    <string name="rate_btn">RATE</string>
    <string name="check_btn">CHECK</string>
    <string name="fuel_station">Fuel Station</string>
    <string name="btn_available">Available</string>
    <string name="current_q">Current Queue Number</string>
    <string name="q_number">25</string>
    <string name="fuel_vol">Available Fuel Volume</string>
    <string name="btn_join">JOIN QUEUE</string>
    <string name="btn_exit">EXIT WITHOUT PUMP</string>
    <string name="req_vol">Requested Fuel Vol.</string>
    <string name="btn_pump">PUMP</string>
    <string name="q_num">Queue Number</string>
    <string name="wait">Time to Wait</string>
    <string name="wait_time">2hr 30min</string>
    <string name="btn_wait">LET ME WAIT</string>
    <string name="btn_full">I AM FULL</string>
    <string name="btn_delete">DELETE ANYWAY</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="delete_msg1">Are you sure you want to</string>
    <string name="delete_msg2">delete this item?</string>
    <string name="test">Testing</string>
    <string name="float_btn">Add</string>
    <string name="edit_btn">EDIT</string>
    <string name="delete_btn">DELETE</string>
    <string name="login_link">Already have an account</string>
    <string name="login_link2"><u>Login Here</u></string>
    <string name="txt_veh">Vehicles</string>
</resources>