<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/octane"
            android:textColor="#FB0303"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--text view for our batch name-->
            <TextView
                android:id="@+id/txt_remaining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/arriving_litres"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/txt_litres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/litres1"
                android:textColor="#12E30D"
                android:textSize="16sp"
                app:fontFamily="sans-serif-black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_vehicleType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/remaining_litres"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/txt_arriving4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/litres2"
                android:textColor="#12E30D"
                android:textSize="16sp"
                app:fontFamily="sans-serif-black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="166dp"
                android:layout_height="45dp"
                android:text="@string/edit_btn"
                android:textSize="15sp"
                app:backgroundTint="#126806"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.449"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.815" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="166dp"
                android:layout_height="45dp"
                android:text="@string/delete_btn"
                android:textSize="15sp"
                app:backgroundTint="#530303"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.449"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.815" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>