<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_shed"
        android:layout_width="127dp"
        android:layout_height="111dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@drawable/shed"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_list"
        android:layout_width="359dp"
        android:layout_height="230dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        app:srcCompat="@drawable/list"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_fuel_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_vol"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <ImageView
        android:id="@+id/img_triangle3"
        android:layout_width="327dp"
        android:layout_height="293dp"
        android:layout_marginStart="176dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/triangle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_q_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_q"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/txt_queue_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_number"
        android:textColor="#12E30D"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/txt_f_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/litres2"
        android:textColor="#12E30D"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <ImageView
        android:id="@+id/img_triangle4"
        android:layout_width="433dp"
        android:layout_height="402dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="396dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_triangle3"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/triangle1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octane"
        android:textColor="#FB0303"
        android:textSize="22sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/txt_fuelStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shed_id"
        android:textColor="#000000"
        android:textSize="17sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/txt_fuelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shed_name"
        android:textColor="#000000"
        android:textSize="17sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/btn_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_available"
        android:textSize="15sp"
        app:backgroundTint="#12E30D"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn_join"
        android:textSize="20sp"
        app:backgroundTint="#1E48DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn_exit"
        android:textSize="20sp"
        app:backgroundTint="#1E48DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

</androidx.constraintlayout.widget.ConstraintLayout>