<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn_delete"
        android:textSize="20sp"
        app:backgroundTint="#1E48DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn_cancel"
        android:textSize="20sp"
        app:backgroundTint="#1E48DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <ImageView
        android:id="@+id/img_alert"
        android:layout_width="325dp"
        android:layout_height="270dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/alert"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_triangle"
        android:layout_width="302dp"
        android:layout_height="171dp"
        android:layout_marginStart="176dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/triangle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_msg1"
        android:layout_width="367dp"
        android:layout_height="91dp"
        android:padding="4dp"
        android:text="@string/delete_msg1"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/txt_msg2"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:padding="4dp"
        android:text="@string/delete_msg2"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>